# smolagents-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  test.ipynb
examples/: cli.rs  function_calling_agent.rs  parallel.rs  test.rs  test2.rs  test_3.rs
examples/browser/: Cargo.toml  index.html
examples/browser/src/: lib.rs
src/: agents.rs  errors.rs  lib.rs  local_python_interpreter.rs  logger.rs  models.rs  parallel.rs  prompts.rs  sandbox.rs  tools.rs
src/models/: azure.rs  candle.rs  huggingface.rs  lightllm.rs  mod.rs  model_traits.rs  ollama.rs  openai.rs  types.rs
src/tools/: base.rs  ddg_search.rs  final_answer.rs  google_search.rs  mod.rs  python_interpreter.rs  rag_tool.rs  tool_traits.rs  tree_sitter_tool.rs  visit_website.rs  wikipedia_search.rs
