[package]
name = "smolagents"
version = "0.1.0"
edition = "2021"

[dependencies]
htmd = "0.1.6"
reqwest = {version = "0.12.12", features = ['blocking', 'json']}
anyhow = "1.0.95"
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.135"
log = "0.4"
colored = "3.0.0"
scraper = "0.22.0"
terminal_size = "0.4.1"
schemars = "0.8.21"
chrono = "0.4.39"
rustpython-parser = "0.4.0"
pyo3 = { version = "0.19", features = ["auto-initialize"] }
regex = "1.11.0"
[dev-dependencies]
clap = { version = "4.5.1", features = ["derive"] }
textwrap = "0.16.0"


[[bin]]
name = "smolagents-rs"
path = "src/bin/main.rs"
required-features = ["cli-deps"]

[features]
cli-deps = ["dep:clap"]

[dependencies.clap]
version = "4.5.1"
features = ["derive"]
optional = true