[package]
name = "smolagents-rs"
version = "0.1.2"
edition = "2021"
description = "A rust port of the the HuggingFace smolagents library. Build LLM agents with tools and code execution."
license = "Apache-2.0"
authors = ["Akshay Ballal <arballal@gmail.com>"]
repository = "https://github.com/akshayballal95/smolagents-rs"

[dependencies]
htmd = "0.1.6"
reqwest = {version = "0.12.12", features = ['blocking', 'json']}
anyhow = "1.0.95"
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.135"
log = "0.4"
colored = "3.0.0"
scraper = "0.22.0"
terminal_size = "0.4.1"
schemars = "0.8.21"
chrono = "0.4.39"
rustpython-parser = { version = "0.4.0", optional = true }
pyo3 = { version = "0.19", features = ["auto-initialize"], optional = true }
regex = "1.11.0"

[dev-dependencies]
clap = { version = "4.5.1", features = ["derive"] }
textwrap = "0.16.0"


[[bin]]
name = "smolagents-rs"
path = "src/bin/main.rs"
required-features = ["cli"]

[features]
cli = ["dep:clap"]
code-agent = ["dep:rustpython-parser", "dep:pyo3"]
all = ["cli", "code-agent"]

[dependencies.clap]
version = "4.5.1"
features = ["derive"]
optional = true

[[example]]
name = "cli"
required-features = ["cli", "code-agent"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]